// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Tests CreateButton matches the snapshot 1`] = `
Array [
  <button
    onClick={[Function]}
  >
    New Project
  </button>,
  <div
    aria-labelledby="contained-modal-title-vcenter"
    centered={true}
    onHide={[Function]}
    show={false}
    size="lg"
  >
    <div
      closeButton={true}
    >
      <div
        id="contained-modal-title-vcenter"
      >
        Create new Grabit
      </div>
    </div>
    <div>
      <form
        action="#"
        onReset={[Function]}
        onSubmit={[Function]}
      >
        <button
          disabled={false}
          type="submit"
          variant="primary"
        >
          Create
        </button>
      </form>
    </div>
  </div>,
]
`;

exports[`Button Tests DeleteButton matches the snapshot 1`] = `
<button
  className="px-5"
  onClick={[Function]}
/>
`;

exports[`Button Tests LoadButton matches the snapshot 1`] = `
<button
  className="px-5"
  onClick={[Function]}
/>
`;

exports[`Button Tests SaveButton matches the snapshot 1`] = `
<button
  onClick={[Function]}
/>
`;
